# crystalball

./: .travis.yml  Dockerfile  README.md  README.rst  crystalball.py  pyproject.toml  setup.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
.travis/: mypy.docker  py2.docker  py3.docker
Crystalball/: argparsing.py  budget.py  crystalball.py  dask_util.py  filtering.py  main.py  ms.py  region.py  wsclean.py
crystalball/: budget.py  crystalball.py  filtering.py  logger_init.py  ms.py  progress.py  region.py  wsclean.py
test_data/: .gitignore  Makefile  sky_model.txt
test_data/tart.ms/: table.f0  table.f1  table.f2  table.f2i  table.f3  table.f3_TSM0  table.f4  table.f5  table.f6  table.f7
test_data/tart.ms/ANTENNA/: table.f0
test_data/tart.ms/DATA_DESCRIPTION/: table.f0
test_data/tart.ms/FEED/: table.f0  table.f0i
test_data/tart.ms/FIELD/: table.f0  table.f0i
test_data/tart.ms/OBSERVATION/: table.f0
test_data/tart.ms/POLARIZATION/: table.f0  table.f0i
test_data/tart.ms/SOURCE/: table.f0
test_data/tart.ms/SPECTRAL_WINDOW/: table.f0  table.f0i
tests/: conftest.py  test.reg  test_budget.py  test_clean_mask.py  test_end_to_end.py  test_field_selection.py  test_regions.py
