[tool.poetry]
name = "crystalball"
version = "0.4.1"
description = "Predicts visibilities from a parameterised sky model"
authors = ["Paolo Serra and others"]
license = "GPLv2"
readme = "README.rst"
packages = [{include = "crystalball"}]

[tool.poetry.scripts]
crystalball = "crystalball.crystalball:predict"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
dask-ms = "^0.2.23"
loguru = "^0.7.3"
codex-africanus = {extras = ["dask"], version = "^0.4.1"}
psutil = "^6.1.0"
regions = ">0.9"
pytest = {version = "^8.0.0", optional = true}


[tool.poetry.extras]
testing = ["pytest"]

[tool.poetry.group.dev.dependencies]
tbump = "^6.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.tbump.version]
current = "0.4.1"

# Example of a semver regexp.
# Make sure this matches current_version before
# using tbump
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  '''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "{new_version}"

# For each file to patch, add a [[tool.tbump.file]] config
# section containing the path of the file, relative to the
# tbump.toml location.
[[tool.tbump.file]]
src = "pyproject.toml"
search = 'version = "{current_version}"'

[[tool.tbump.file]]
src = "crystalball/__init__.py"
search = '__version__ = "{current_version}"'